feat(contracts): add request and response representations for create and update

--- a/src/Movies.Application/Movies.Application.csproj
+++ b/src/Movies.Application/Movies.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Movie/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Movies.Core\Movies.Core.csproj" />
+  </ItemGroup>
+
 </Project>
