--- a/src/Movies.Infrastructure/Movies.Infrastructure.csproj
+++ b/src/Movies.Infrastructure/Movies.Infrastructure.csproj
@@ -8,6 +8,11 @@
     <Folder Include="Repositories/InMemory/" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Npgsql" Version="8.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
