--- a/src/Movies.Application/Movies.Application.csproj
+++ b/src/Movies.Application/Movies.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Movies.Core\Movies.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
+  </ItemGroup>
+
 </Project>
