--- a/src/Movies.Application/Movies.Application.csproj
+++ b/src/Movies.Application/Movies.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Movies.Core\Movies.Core.csproj" />
+    <ProjectReference Include="..\Movies.Contracts\Movies.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
