feat: add jwt auth

--- a/src/Movies.Api/appsettings.json
+++ b/src/Movies.Api/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "ForTheLoveOfGodStoreAndLoadThisSecurely",
+    "Issuer": "https://id.louisan.com",
+    "Audience": "https://movies.louisan.com"
+  },
   "AllowedHosts": "*",
   "Database": {
     "ConnectionString": "Host=localhost;Port=5432;Database=movies;Username=user;Password=password;"
